--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "gatsby-plugin-google-analytics": "^4.5.0",
     "gatsby-plugin-manifest": "^4.5.2",
     "gatsby-plugin-mdx": "^3.5.2",
+    "gatsby-plugin-postcss": "^5.5.0",
     "gatsby-source-filesystem": "^4.5.2",
+    "postcss": "^8.4.5",
+    "prefixer": "^0.0.3",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "tailwindcss": "^3.0.15"
   }
 }
