--- a/package.json
+++ b/package.json
@@ -1,32 +1,62 @@
 {
-  "name": "portfolio",
-  "version": "1.0.0",
-  "private": true,
-  "description": "portfolio",
-  "author": "Felipe Munhoz Afonso",
+  "name": "@pauloelias/gatsby-tailwind-emotion-starter",
+  "version": "2.3.1",
+  "description": "A Tailwind CSS + Emotion starter for Gatsby",
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "tailwind",
+    "emotion",
+    "starter",
+    "react",
+    "css-in-js"
   ],
+  "author": {
+    "email": "paulo@pauloelias.com",
+    "name": "Paulo Elias",
+    "url": "https://www.pauloelias.com/",
+    "twitter": "@pauloelias"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pauloelias/gatsby-tailwind-emotion-starter"
+  },
+  "bugs": {
+    "url": "https://github.com/pauloelias/gatsby-tailwind-emotion-starter/issues"
+  },
+  "license": "MIT",
+  "private": false,
+  "engines": {
+    "node": ">=10.13"
+  },
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
     "build": "gatsby build",
+    "clean": "rimraf .cache public",
+    "develop": "gatsby develop",
+    "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "gatsby": "^4.5.4",
-    "gatsby-plugin-google-analytics": "^4.5.0",
-    "gatsby-plugin-manifest": "^4.5.2",
-    "gatsby-plugin-mdx": "^3.5.2",
-    "gatsby-plugin-postcss": "^5.5.0",
-    "gatsby-source-filesystem": "^4.5.2",
-    "postcss": "^8.4.5",
-    "prefixer": "^0.0.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "tailwindcss": "^3.0.15"
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
+    "gatsby": "^2.24.65",
+    "gatsby-plugin-emotion": "^4.3.11",
+    "gatsby-plugin-postcss": "^2.3.12",
+    "gatsby-plugin-react-helmet": "^3.3.11",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "twin.macro": "^1.10.0"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^3.0.0",
+    "babel-preset-gatsby": "^0.5.10",
+    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "rimraf": "^3.0.2",
+    "stylelint-config-recommended": "^3.0.0",
+    "tailwindcss": "^1.8.10"
   }
 }
