--- a/package.json
+++ b/package.json
@@ -1,62 +1,23 @@
 {
-  "name": "@pauloelias/gatsby-tailwind-emotion-starter",
-  "version": "2.3.1",
-  "description": "A Tailwind CSS + Emotion starter for Gatsby",
-  "keywords": [
-    "gatsby",
-    "tailwind",
-    "emotion",
-    "starter",
-    "react",
-    "css-in-js"
-  ],
-  "author": {
-    "email": "paulo@pauloelias.com",
-    "name": "Paulo Elias",
-    "url": "https://www.pauloelias.com/",
-    "twitter": "@pauloelias"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pauloelias/gatsby-tailwind-emotion-starter"
-  },
-  "bugs": {
-    "url": "https://github.com/pauloelias/gatsby-tailwind-emotion-starter/issues"
-  },
-  "license": "MIT",
-  "private": false,
-  "engines": {
-    "node": ">=10.13"
-  },
+  "name": "portfolio",
+  "version": "0.0.0",
   "scripts": {
-    "build": "gatsby build",
-    "clean": "rimraf .cache public",
-    "develop": "gatsby develop",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.35",
-    "@emotion/styled": "^10.0.27",
-    "gatsby": "^2.24.65",
-    "gatsby-plugin-emotion": "^4.3.11",
-    "gatsby-plugin-postcss": "^2.3.12",
-    "gatsby-plugin-react-helmet": "^3.3.11",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0",
-    "twin.macro": "^1.10.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^3.0.0",
-    "babel-preset-gatsby": "^0.5.10",
-    "postcss-flexbugs-fixes": "^4.2.1",
-    "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.7.0",
-    "rimraf": "^3.0.2",
-    "stylelint-config-recommended": "^3.0.0",
-    "tailwindcss": "^1.8.10"
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@vitejs/plugin-react": "^1.0.7",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.15",
+    "typescript": "^4.4.4",
+    "vite": "^2.7.2"
   }
 }
