--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "wouter": "^2.8.0-alpha.2"
+    "react-router-dom": "6"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
