--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.40",
