--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "dependencies": {
     "@tippyjs/react": "^4.2.6",
     "framer-motion": "^6.3.1",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-query": "^3.38.0",
     "react-router-dom": "^6.3.0",
     "typewriter-effect": "^2.18.2"
   },
