--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tippyjs/react": "^4.2.6",
+    "framer-motion": "^6.3.3",
+    "graphql": "^16.4.0",
+    "graphql-request": "^4.2.0",
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
+    "react-query": "^3.38.0",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "@types/node": "17.0.30",
